--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.8"
 requests = "^2.25.1"
 lxml = "^4.6.3"
 beautifulsoup4 = "^4.9.3"
+pandas = "^1.2.4"
 
 [tool.poetry.dev-dependencies]
 
