--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ requests = "^2.25.1"
 lxml = "^4.6.3"
 beautifulsoup4 = "^4.9.3"
 pandas = "^1.2.4"
+black = "^21.5b0"
 
 [tool.poetry.dev-dependencies]
 
