added citilink client

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 *.csv
 .vscode
-*Технопарк_телефоны/
 data/
-Эльдорадо_телефоны/
 __pycache__
+
+
+Технопарк_телефоны/
+Эльдорадо_телефоны/
+Ситилинк_телефоны/
